--- a/css/CETEIcean.css
+++ b/css/CETEIcean.css
@@ -1833,6 +1833,7 @@ mei-filedesc > mei-titlestmt> mei-respstmt > mei-persname[role="encoder"]::befor
   font-weight: bold;
   content: '\a'"Encoded by: ";
   white-space: pre;
+  font-size: 30pt;
 }
 
 mei-filedesc > mei-pubstmt > mei-respstmt {
