--- a/css/CETEIcean.css
+++ b/css/CETEIcean.css
@@ -1827,9 +1827,9 @@ mei-filedesc > mei-titlestmt > mei-respstmt {
   margin-top: 1em;
 }
 
-mei-filedesc > mei-titlestmt > mei-composer::before {
+mei-filedesc > mei-titlestmt > mei-respstmt > mei-composer::before {
   font-weight: bold;
-  content: "Composer: ";
+  content: '\a' "Composed by: ";
   white-space: pre;
   margin-top: 2em;
 }
@@ -1843,6 +1843,7 @@ mei-filedesc > mei-titlestmt> mei-respstmt > mei-name::before {
 
 mei-filedesc > mei-pubstmt > mei-publisher::before {
   content: '\a' "Published by: ";
+  font-size:15;
 }
 
 mei-filedesc > mei-titlestmt> mei-respstmt > mei-name {
@@ -1860,7 +1861,8 @@ mei-pubstmt > mei-address {
 
 mei-filedesc > mei-pubstmt > mei-date::before {
   font-weight: bold;
-  content: "Date encoded: "
+  content: "Date encoded: ";
+  font-size:15; 
 }
 
 mei-filedesc > mei-pubstmt > mei-date::after {
@@ -1872,6 +1874,7 @@ mei-filedesc > mei-pubstmt > mei-availability > mei-userestrict {
   font-style: italic;
   display: block;
   margin-top: 0.5em;
+  font-size: 15pt;
 }
 
 mei-filedesc > mei-pubstmt > mei-availability > mei-userestrict::after {
