--- a/css/CETEIcean.css
+++ b/css/CETEIcean.css
@@ -1844,6 +1844,7 @@ mei-filedesc > mei-titlestmt> mei-respstmt > mei-name::before {
 mei-filedesc > mei-pubstmt > mei-publisher::before {
   content: '\a' "Published by: ";
   font-size:15;
+  font-style: bold;
 }
 
 mei-filedesc > mei-titlestmt> mei-respstmt > mei-name {
